Style updates to avoid projector scrollbar on images, custom domain csv files

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,13 +1,12 @@
 @charset "utf-8";
 /* CSS Document*/
-
 @import url('https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic|Nova+Mono|Source+Code+Pro');
 
 /* UNIVERSAL */
 
 html,
 body {
-height: 100%;
+  height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -15,127 +14,114 @@ height: 100%;
   top: 0;
   font-size: 100%;
   background-color: black;
-/*  overflow: hidden;*/
 }
 
-
 * {
- color: #FFF;
+  color: #FFF;
 }
 
 .visionblock {
-	margin-left: auto;
-    margin-right: auto;
-/*	margin-top: 12px;
-    width: 640px*/
+  margin-left: auto;
+  margin-right: auto;
 }
 
+/*.visionblock, .ng-star-inserted {*/
+  /*height: 100%;*/
+/*}*/
+
 @keyframes fadein {
-	from {opacity: 0;}
-	to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 p {
- font-size: 1.2rem;
-    font-weight: 200;
-  	font-family: 'Lato', Helvetica, sans-serif;
-	-webkit-animation: fadein 2s;
+  font-size: 1.2rem;
+  font-weight: 200;
+  font-family: 'Lato', Helvetica, sans-serif;
+  -webkit-animation: fadein 2s;
 }
 
-
 .overviewlg {
-	text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .visions {
-	color: white;
-	text-shadow:  1px 1px 1px black;
-	font-family: 'Nova Mono', monospace;
-	text-align: center;
-  	font-size: 1rem;
-	font-weight: 300;
-	padding: 4px;
-	line-height: 2.5rem;
-	border-radius: 0px;
-    background: rgba(4, 229, 237, 0.5); /* aqua background with 0.5 opacity */
+  color: white;
+  text-shadow: 1px 1px 1px black;
+  font-family: 'Nova Mono', monospace;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 300;
+  padding: 4px;
+  line-height: 2.5rem;
+  border-radius: 0px;
+  background: rgba(4, 229, 237, 0.5); /* aqua background with 0.5 opacity */
 }
 
 .thought {
-	color: forestgreen;
-/*	-webkit-animation: test 4s;
-	animation-iteration-count: infinite*/
+  color: forestgreen;
 }
 
-/*@keyframes test {
-	0% {opacity: 0.4;}
-	25% {opacity: 0.6;}
-	50% {opacity: 0.8;}
-	75% {opacity: 1}
-	100% {opacity: 0.8}
-
-}*/
-
-IMG.eyes {
-	width: 100%; 
-	height: auto;
+img.eyes {
+  height: 100%;
+  width: 100%;
+  /*height: auto;*/
+  /*width: auto;*/
+  position: absolute;
+  top:0px;
+  left: 0px;
 }
 
 img.reflect {
-/*	position: static;
-    top: 10px;
-	z-index: 5000;
-    float: right;*/
-	padding: 20px 0px;
+  padding: 20px 0px;
 }
 
 .overview {
-	font-size: 14px;
-	font-weight: 400;
-	line-height: 24px;
-	margin-left: auto;
-    margin-right: auto;
-    width: 640px
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 640px
 }
-
 
 .overlay {
-	position: fixed;
-	text-align: right;
-    top: 100px;
-	right: 60px;
-	z-index: 600;
+  position: fixed;
+  text-align: right;
+  top: 100px;
+  right: 60px;
+  z-index: 600;
 }
 
-
-.homenav{
-	position: fixed;
-    right:20px;
-    top:30px;
-	z-index: 600;
-	/*float: right;	padding: 10px 60px;	z-index: 600;*/
+.homenav {
+  position: fixed;
+  right: 20px;
+  top: 30px;
+  z-index: 600;
 }
 
 .background {
-	/*
-	72 px is the height of the header, subtracting this means we dont get a vertical scrollbar
-	*/
-	height: calc(100% - 72px);
-	background: url(http://s3.amazonaws.com/backdoored-io-images/wp-content/uploads/213.153.78.2372017-12-04T123622.035349.jpg) no-repeat;
-	background-size: cover;
-	overflow: hidden;
-
-	padding: 60px;
-
-	display: flex;
-/*	align-items: start;*/
-	align-items: initial;
+  /*
+    72 px is the height of the header, subtracting this means we dont get a vertical scrollbar
+    */
+  height: calc(100% - 72px);
+  background: url(http://s3.amazonaws.com/backdoored-io-images/wp-content/uploads/213.153.78.2372017-12-04T123622.035349.jpg) no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  padding: 60px;
+  display: flex;
+  /*	align-items: start;*/
+  align-items: initial;
 }
 
 .background img {
-	flex: 1;
+  flex: 1;
 }
 
-.intro{
-	color: #DBDBDB;
-
+.intro {
+  color: #DBDBDB;
 }
